--- a/views/app/index.html
+++ b/views/app/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div class="nav-wrapper">
-                <a href="/" class="brand-logo left">Communications Handler</a>
+                <a href="/" class="brand-logo left">DevHub Client</a>
             </div>
         </nav>
     </header>
@@ -32,7 +32,7 @@
             <div class="input-field col s4">
                 <button class="waves-effect waves-light btn" @click="send">
                     <i class="material-icons right">chat</i>
-                    Send
+                    Post
                 </button>
             </div>
         </div>
