--- a/views/app/index.html
+++ b/views/app/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="row">
             <div class="input-field col s8">
-                <input type="text" v-model="newMsg" @keyup.enter="send" placeholder="message">
+                <input type="text" v-model="newMsg" @keyup.enter="send" placeholder="write a post">
             </div>
             <div class="input-field col s4">
                 <button class="waves-effect waves-light btn" @click="send">
