--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,9 @@
   font-family: "Rubik";
   margin: 0;
 }
-
+body {
+  background-color: #fff8dc;
+}
 .header {
   overflow: hidden;
   background-color: #654321;
@@ -39,6 +41,11 @@
 .header a.active {
   background-color: #deb887;
   color: black;
+  margin-left: 10px;
+}
+.header a.activered {
+  background-color: #d31349;
+  color: white;
   margin-left: 10px;
 }
 
@@ -87,7 +94,7 @@
 }
 
 
-.title {
+.title-main {
   font-size: 70px;
   color: #00802b;
 }
@@ -122,4 +129,104 @@
 
 .door .container {
   padding: 15px;
+}
+.app .postcontainer{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  padding: 5px;
+  background-color: #deb887;
+}
+.app .input {
+  color: black;
+  padding: 10px;
+  border: 1px solid #00802b;
+  border-radius: 10px;
+  background-color: fff8dc;
+  width: 80%;
+
+}
+
+.app .input:focus {
+    border: 2px solid red;
+}
+.app .button {
+  color: white;
+  padding: 10px;
+  border: 1px solid #00802b;
+  border-radius: 10px;
+  background-color: #00802b;
+  width: 20%;
+}
+
+.chatcontainer {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin: 50px;
+    border-radius: 10px;
+    background-color: #654321;
+    padding: 25px;
+}
+
+
+
+.card {
+  border-radius: 10px;
+  display: flex;
+  background-color: #deb887;
+  text-decoration: none;
+  padding: 15px;
+  margin-bottom: 20px;
+}
+
+.card .avatar {
+  height: 80px;
+  width: 80px;
+  border-radius: 100px;
+  cursor: pointer;
+}
+
+.card .caption {
+  padding-left: 15px;
+}
+.card .username {
+  color: black;
+  margin-top: 2px;
+  font-weight: 400;
+  text-decoration: underline;
+  font-size: 15px;
+
+}
+.card .content {
+  color: black;
+  margin-top: 2px;
+  font-weight: 400;
+
+  font-size: 15px;
+
+}
+
+#myBtn {
+  display: none;
+  position: fixed;
+  top: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #00802b;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  background-color: #555;
+}
+
+.more {
+  color: #fff8dc;
 }
