--- a/views/app/index.html
+++ b/views/app/index.html
@@ -3,34 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="/style.css">
     <title>DevHub Client</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="nav-wrapper">
-                <a href="/" class="brand-logo left">DevHub Client</a>
-            </div>
-        </nav>
-    </header>
-    <main id="app">
+  <div class="header">
+    <a href="/" class="logo"><h1>🌵</h1></a>
+    <div class="header-right">
+      <a class="activered" href="logout">Logout</a>
+    </div>
+  </div>
+    <main id="app" class="app">
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
         <div class="row">
-            <div class="col s12">
-                <div class="card horizontal">
+                <div class="chatcontainer">
                     <div id="chat-messages" class="card-content" v-html="chatContent">
                     </div>
+
+                    <div class="more" @click="more">load more</div>
                 </div>
-            </div>
         </div>
         <div class="row">
-            <div class="input-field col s8">
-                <input type="text" v-model="newMsg" @keyup.enter="send" placeholder="write a post">
-            </div>
-            <div class="input-field col s4">
-                <button class="waves-effect waves-light btn" @click="send">
+            <div class="postcontainer">
+                <input class="input" type="text" v-model="newMsg" @keyup.enter="send" placeholder="write a post">
+
+                <button class="waves-effect waves-light btn button" @click="send">
                     <i class="material-icons right">chat</i>
                     Post
                 </button>
@@ -40,7 +39,7 @@
     </main>
     <script src="https://unpkg.com/vue@2.1.3/dist/vue.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>-->
     <script src="/app.js"></script>
 </body>
 </html>
