--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
 
     <div class="hero">
       <div class="middle-container">
-        <h1 class="title">DevHub</h1>
+        <h1 class="title-main">DevHub</h1>
         <h1>
           The social media for developpers
         </h1>
