--- a/views/app/index.html
+++ b/views/app/index.html
@@ -9,13 +9,13 @@
     <title>DevHub Client</title>
 </head>
 <body>
-  <div class="header">
-    <a href="/" class="logo"><h1>🌵</h1></a>
-    <div class="header-right">
-      <a class="activered" href="logout">Logout</a>
-    </div>
-  </div>
-    <main id="app" class="app">
+  <main id="app" class="app">
+      <div class="header">
+        <a href="/" class="logo"><h1>🌵DevHub</h1></a>
+        <div class="header-right">
+          <a class="activered" @click="logout">Logout</a>
+        </div>
+      </div>
       <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
         <div class="row">
                 <div class="chatcontainer">
