--- a/views/login/index.html
+++ b/views/login/index.html
@@ -4,7 +4,7 @@
   <script type="text/javascript" src="/login.js"></script>
   <body>
     <div class="header">
-      <a href="/" class="logo"><h1>🌵</h1></a>
+      <a href="/" class="logo"><h1>🌵DevHub</h1></a>
       <div class="header-right">
         <a class="active" href="/register">Register</a>
         <a class="active" href="/login">Login</a>
