--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
   <link rel="stylesheet" href="/style.css"/>
   <body>
     <div class="header">
-      <a href="/" class="logo"><h1>🌵</h1></a>
+      <a href="/" class="logo"><h1>🌵DevHub</h1></a>
       <div class="header-right">
         <a class="active" href="/register">Register</a>
         <a class="active" href="/login">Login</a>
