--- a/views/register/index.html
+++ b/views/register/index.html
@@ -1,6 +1,7 @@
 <html>
   <title>DevHub</title>
   <link rel="stylesheet" href="/style.css" />
+  <script type="text/javascript" src="/register.js"></script>
   <body>
     <div class="header">
       <a href="/" class="logo"><h1>🌵DevHub</h1></a>
@@ -16,26 +17,26 @@
           Create a DevHub account:
         </h1>
         <br>
-          <form class="door">
+          <div class="door">
             <div class="container">
               <p class="p">Your username: </p>
-              <input class="input" type="text" placeholder="username">
+              <input class="input" type="text" placeholder="username" id="username">
             </div>
 
             <div class="container">
               <p class="p">Your password: </p>
-              <input class="input" type="password" placeholder="password">
+              <input class="input" type="password" placeholder="password" id="password">
             </div>
 
             <div class="container">
               <p class="p">Repeat your password: </p>
-              <input class="input" type="password" placeholder="password">
+              <input class="input" type="password" placeholder="password" id="cpassword">
             </div>
 
             <div class="container">
-              <button class="button" type="submit" name="button">Login</button>
+              <button class="button" name="button" onclick="register();">Register</button>
             </div>
-          </form>
+          </div>
       </div>
     </div>
 
